--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\a.cs" />
+     <Compile Include="Assets\Scripts\GameEnding.cs" />
      <Compile Include="Assets\Scripts\LightFlicker.cs" />
      <Compile Include="Assets\Scripts\Outliner.cs" />
      <Compile Include="Assets\Scripts\PlayerMovement.cs" />
